--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.1",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0", 
+    "simple-peer": "^9.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
